feat:FPLA-2136 refactored the business logic and added tests